--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,7 +1,7 @@
 <section class='sign'>
   <h3>Please login</h3>
   <form action='/login' method='post'>
-    <input type='text' name='username' placeholder='Your alias or email...'>
+    <input type='text' name='alias' placeholder='Your alias...'>
     <input type='password' name='password' placeholder='Your password...'>
     <input type='submit' value='Login'>
   </form>
