--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -5,4 +5,7 @@
     <input type='password' name='password' placeholder='Your password...'>
     <input type='submit' value='Login'>
   </form>
+  <form class='option' action='/register' method='get'>
+    <input type='submit' value='Register'>
+  </form>
 </section>
