--- a/app/views/lovers/new.erb
+++ b/app/views/lovers/new.erb
@@ -1,7 +1,7 @@
 <section class='sign'>
-  <h3>Please register</h3>
-  <form action='/register' method='post'>
-    <label for="artist">Artist</label>
+  <h3>Please Sign Up</h3>
+  <form action='/lovers' method='post'>
+    <label for="artist">Are you an artist?</label>
     <input type='checkbox' name='artist' checked>
     <input type='text' name='alias' placeholder='Your alias...'>
     <input type='email' name='email' placeholder='Your email...'>
@@ -11,9 +11,9 @@
     <input type='url' name='image_url' placeholder='Your image url...'>
     <textarea name='bio' placeholder='Your bio...'></textarea>
     <input type='url' name='website_url' placeholder='Your website url...'>
-    <input type='submit' value='Register'>
+    <input type='submit' value='Sign Up'>
   </form>
-  <form  class='option' action='/login' method='get'>
-    <input type='submit' value='Login'>
+  <form  class='option' action='/lovers/login' method='get'>
+    <input type='submit' value='Sign In'>
   </form>
 </section>
