Adapt random artwork listing behavior for likes

--- a/app/views/artworks/index.erb
+++ b/app/views/artworks/index.erb
@@ -3,7 +3,7 @@
     <a href="/artworks/new" >[Add]</a>
   <% else %>
     <% if @selected_artist.nil? %>
-      <a href="/artworks" >[Next]</a>
+      <a href="/artworks?random=true" >[Next]</a>
     <% else %>
       <a href="/lovers/<%= @selected_artist.id %>"><%= @selected_artist.alias %></a>
     <% end %>
