Add partial for artwork likes

--- a/app/views/artworks/index.erb
+++ b/app/views/artworks/index.erb
@@ -16,22 +16,6 @@
     <% if !@home && @selected_artist.nil? %>
       <p>By <a href="/lovers/<%= artwork.artist.id %>"><%= artwork.artist.alias %></a>
     <% end %>
-    <p>Likes: <%= artwork.likes.count %></p>
-    <% if !@home %>
-      <% if !logged_in? %>
-        <form action='/lovers/login' method='get'>
-          <input type='submit' value='Like'>
-        </form>
-      <% elsif artwork.likes.find_by(lover_id: current_lover.id) %>
-        <form action='/artworks/<%= artwork.id %>/likes' method='post'>
-          <input type='hidden' name='_method' value='delete'>
-          <input type='submit' value='Unlike'>
-        </form>
-      <% else %>
-        <form action='/artworks/<%= artwork.id %>/likes' method='post'>
-          <input type='submit' value='Like'>
-        </form>
-      <% end %>
-    <% end %>
+    <%= erb :'artworks/_like', locals: {home: @home, artwork: artwork} %>
   </section>
 <% end %>
