--- a/app/views/artworks/show.erb
+++ b/app/views/artworks/show.erb
@@ -12,19 +12,5 @@
     <a href="/lovers/<%= @artwork.artist.id %>"><%= @artwork.artist.alias %></a>
   <% end %>
   <p><%= @artwork.description %></p>
-  <p>Likes: <%= @artwork.likes.count %></p>
-  <% if !logged_in? %>
-    <form action='/lovers/login' method='get'>
-      <input type='submit' value='Like'>
-    </form>
-  <% elsif @artwork.likes.find_by(lover_id: current_lover.id) %>
-    <form action='/artworks/<%= @artwork.id %>/likes' method='post'>
-      <input type='hidden' name='_method' value='delete'>
-      <input type='submit' value='Unlike'>
-    </form>
-  <% else %>
-    <form action='/artworks/<%= @artwork.id %>/likes' method='post'>
-      <input type='submit' value='Like'>
-    </form>
-  <% end %>
+  <%= erb :'artworks/_like', locals: {home: @home, artwork: @artwork} %>
 </section>
