Add ajax like/unlike count

--- a/app/views/artworks/_like.erb
+++ b/app/views/artworks/_like.erb
@@ -1,16 +1,16 @@
-<p>Likes: <%= artwork.likes.count %></p>
+<p>Likes: <span><%= artwork.likes.count %></span></p>
 <% if !home %>
   <% if !logged_in? %>
     <form action='/lovers/login' method='get'>
       <input type='submit' value='Like'>
     </form>
   <% elsif artwork.likes.find_by(lover_id: current_lover.id) %>
-    <form action='/artworks/<%= artwork.id %>/likes' method='post'>
+    <form class='unlike' action='/artworks/<%= artwork.id %>/likes' method='post'>
       <input type='hidden' name='_method' value='delete'>
       <input type='submit' value='Unlike'>
     </form>
   <% else %>
-    <form action='/artworks/<%= artwork.id %>/likes' method='post'>
+    <form class='like' action='/artworks/<%= artwork.id %>/likes' method='post'>
       <input type='submit' value='Like'>
     </form>
   <% end %>
