Fix lover website display and blank spaces in csv

--- a/app/views/lovers/show.erb
+++ b/app/views/lovers/show.erb
@@ -9,6 +9,6 @@
     <p><a href="/artists/<%= @lover.id %>/artworks">See Artwork</a></p>
   <% end %>
   <p><a href="mailto:<%= @lover.email %>"><%= @lover.email %></a></p>
-  <p><a href="<%= @lover.website_url %>"></a></p>
+  <p><a href="<%= @lover.website_url %>">Visit Website</a></p>
   <p><%= @lover.bio %></p>
 </section>
