--- a/public/css/application.css
+++ b/public/css/application.css
@@ -118,3 +118,45 @@ header img {
 .inactive {
   display: none;
 }
+
+.update {
+  margin: 20px auto;
+  width: 600px;
+  padding: 0px 20px 20px 20px;
+}
+
+.update input {
+  display: block;
+  margin-top: 20px;
+}
+
+.update textarea {
+  display: block;
+  width: 100%;
+  height: 50px;
+  margin-top: 20px;
+}
+
+.feeds {
+  width: 100%;
+}
+
+.feed {
+  margin-top: 10px;
+  padding: 0px 10px;
+  border: 1px solid black;
+  border-radius: 15px;
+}
+
+.custom-update {
+  background-color: green;
+}
+
+.artwork-update {
+  background-color: yellow;
+}
+
+.like-update {
+  background-color: red;
+}
+
